--- a/calculadora.html
+++ b/calculadora.html
@@ -6,45 +6,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <style>
+        .boton{
+            width: 97px;
+            height: 60px;
+            font-size: 20px;
+            margin: 5px;
+            border: none;
+            color: black;
+            background-color: rgb(78, 210, 78);
+            border-radius: 32px;
+            font-size: 23px;
+            box-shadow: 5px 5px 10px -3px black;
+        }
+        .boton-signo{
+            width: 97px;
+            height: 60px;
+            font-size: 20px;
+            margin: 5px;
+            border: none;
+            color: black;
+            background-color: rgb(233, 233, 233);
+            border-radius: 32px;
+            font-size: 23px;
+            box-shadow: 5px 5px 10px -3px black;
+        }
 
+        .caja{
+            width: 150px;
+            height: 65px;
+            font-size: 20px;
+            margin: 5px;
+            border: none;
+            box-shadow: -3px 3px 10px -3px black;
+        }
+
+        .div{
+            position: relative;
+            display: flex;
+            justify-content: center;
+            top: 100px;
+        }
+
+        .div_2{
+            position: relative;
+            display: flex;
+            justify-content: center;
+            left: -54px;
+            top: 100px;
+        }
+
+        .Rtda{
+            font-size: 70px;
+        }
     </style>
     </head>
 
-    <body>
-        <div>
-            <input id="caja1">
+    <body class="body">
+        <div class="div">
+            <input id="caja1" class="caja">
             <label id="signo"></label>
-            <input id="caja2">
-            <label>=</label>
-            <input id="caja3">
+            <input id="caja2" class="caja">
+            <label class="Rtda">=</label>
+            <input id="caja3" class="caja">
         </div>
 
-        <div>
+        <div class="div">
             <button class="boton" onclick="apendSimbol('1')">1</button>
             <button class="boton" onclick="apendSimbol('2')">2</button>
             <button class="boton" onclick="apendSimbol('3')">3</button>
-            <button class="boton" onclick="apendOperator('+')">+</button>
-            <button class="boton" onclick="cambiarCaja()">⇔</button>
+            <button class="boton-signo" onclick="apendOperator('+')">+</button>
+            <button class="boton-signo" onclick="cambiarCaja()">⇔</button>
 
         </div>
-        <div>
+        <div class="div">
             <button class="boton" onclick="apendSimbol('4')">4</button>
             <button class="boton" onclick="apendSimbol('5')">5</button>
             <button class="boton" onclick="apendSimbol('6')">6</button>
-            <button class="boton" onclick="apendOperator('-')">-</button>
-            <button class="boton" onclick="apendResultado('=')">=</button>
+            <button class="boton-signo" onclick="apendOperator('-')">-</button>
+            <button class="boton-signo" onclick="apendResultado('=')">=</button>
         </div>
-        <div>
+        <div class="div_2">
             <button class="boton" onclick="apendSimbol('7')">7</button>
             <button class="boton" onclick="apendSimbol('8')">8</button>
             <button class="boton" onclick="apendSimbol('9')">9</button>
-            <button class="boton" onclick="apendOperator('/')">/</button>
+            <button class="boton-signo" onclick="apendOperator('/')">*</button>
         </div>
-        <div>
-            <button class="boton" onclick="apendSimbol('.')">.</button>
-            <button class="boton" onclick="apendSimbol('0')">0</button>
-            <button class="boton" onclick="removeLast()">←</button>
-            <button class="boton" onclick="apendOperator('*')">*</button>
+        <div class="div_2">
+            <button class="boton" onclick="apendSimbol('.')">0</button>
+            <button class="boton" onclick="apendSimbol('0')">.</button>
+            <button class="boton-signo" onclick="removeLast()">←</button>
+            <button class="boton-signo" onclick="apendOperator('*')">/</button>
         </div>
 
         <script>
