--- a/calculadora.html
+++ b/calculadora.html
@@ -15,7 +15,7 @@
 
         .calculadora{
             width: 650px;
-            height: 470px;
+            height: 490px;
             background-color: rgb(50, 177, 50);
             border-radius: 32px;
             box-shadow: -15px 15px 20px -3px black;
@@ -112,13 +112,13 @@
                     <button class="boton" onclick="apendSimbol('7')">7</button>
                     <button class="boton" onclick="apendSimbol('8')">8</button>
                     <button class="boton" onclick="apendSimbol('9')">9</button>
-                    <button class="boton-signo" onclick="apendOperator('/')">*</button>
+                    <button class="boton-signo" onclick="apendOperator('*')">*</button>
                 </div>
                 <div class="div_2">
                     <button class="boton" onclick="apendSimbol('0')">0</button>
                     <button class="boton" onclick="apendSimbol('.')">.</button>
                     <button class="boton-signo" onclick="removeLast()">←</button>
-                    <button class="boton-signo" onclick="apendOperator('*')">/</button>
+                    <button class="boton-signo" onclick="apendOperator('/')">/</button>
                 </div>
             </div>
         </div>
